@@ -1,3 +1,9 @@
+2003-07-18  David Malcolm <david@davemalcolm.demon.co.uk>
+
+	* cong-debug-log-view.c
+
+	Made the signal callbacks static
+
 2003-07-18  Geert Stappers <Geert.Stappers@xs4all.nl>
 
 	* cong-editor-area-span-tag.c
